--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ pytest = "^8.3.3"
 fastapi = {extras = ["standard"], version = "^0.115.5"}
 uvicorn = "^0.32.0"
 asyncpg = "^0.30.0"
+pydantic-settings = "^2.7.1"
+sqlmodel = "^0.0.22"
+psycopg2 = "^2.9.10"
 
 
 [build-system]
