--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ asyncpg = "^0.30.0"
 pydantic-settings = "^2.7.1"
 sqlmodel = "^0.0.22"
 psycopg2 = "^2.9.10"
+alembic = "^1.16.4"
 
 
 [build-system]
