--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ pydantic-settings = "^2.7.1"
 sqlmodel = "^0.0.22"
 psycopg2 = "^2.9.10"
 alembic = "^1.16.4"
+passlib = "^1.7.4"
+bcrypt = "^4.3.0"
 
 
 [build-system]
